tests/parsing/smtlib/v2.6/errors/116_input_bad_2.expected
File "tests/parsing/smtlib/v2.6/errors/116_input_bad_2.smt2", line 2, character 0-1:
2 | _
    ^
Error while parsing an input statement, read the reserved word '_',
      but expected an opening parenthesis to start a command.
